completed postify and cart icon

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>HYKM's Book Store</title>
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script defer src="https://kit.fontawesome.com/f1bf963aa1.js" crossorigin="anonymous"></script>
     <script defer src="/bundle.js"></script>
+    <script type="text/javascript" defer src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </head>
   <body>
     <div id="app"></div>
