update: basic styling

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head style="color:red;">
+
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>HYKM's Book Store</title>
+    <title style='color:white'>HYKM's Book Store</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script defer src="https://kit.fontawesome.com/f1bf963aa1.js" crossorigin="anonymous"></script>
