--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head style="color:red;">
+  <head style="color:pink;">
 
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
