--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <title style='color:white'>HYKM's Book Store</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script defer src="https://kit.fontawesome.com/f1bf963aa1.js" crossorigin="anonymous"></script>
-    <script defer src="/bundle.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap" rel="stylesheet">    <script defer src="/bundle.js"></script>
     <script type="text/javascript" defer src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </head>
   <body>
